RESOLVED FIXED 256975
AX: Fix build break after 264188@main if ACCESSIBILITY is not enabled
https://bugs.webkit.org/show_bug.cgi?id=256975
Summary AX: Fix build break after 264188@main if ACCESSIBILITY is not enabled
Jigen Zhou
Reported 2023-05-18 12:02:23 PDT
PlayStation build failed: Link : error: L0039: reference to undefined symbol `WebCore::AXObjectCache::setForceDeferredSpellChecking(bool)' in file "C:\BW\PlayStation-Debug-Build\build\WebKitBuild\Debug\Source\WebKit\CMakeFiles\WebKit.dir\__\__\WebKit\DerivedSources\unified-sources\UnifiedSource-54928a2b-14.cpp.o" UnifiedSource-54928a2b-14.cpp : error: L0039: reference to undefined symbol `WebCore::AXObjectCache::setForceDeferredSpellChecking(bool)' in file "C:\BW\PlayStation-Debug-Build\build\WebKitBuild\Debug\Source\WebKit\CMakeFiles\WebKit.dir\__\__\WebKit\DerivedSources\unified-sources\UnifiedSource-54928a2b-14.cpp.o"
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-18 12:02:37 PDT
Jigen Zhou
Comment 2 2023-05-18 16:05:13 PDT
EWS
Comment 3 2023-05-18 18:06:54 PDT
Committed 264226@main (48d4a709324a): <https://commits.webkit.org/264226@main> Reviewed commits have been landed. Closing PR #14044 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.