Fixed build break after 264188@main if ACCESSIBILITY is not enable. https://bugs.webkit.org/show_bug.cgi?id=256975

Reviewed by Don Olmstead.

Fixed AXObjectCache::setForceDeferredSpellChecking if !ENABLE(ACCESSIBILITY).

Canonical link: https://commits.webkit.org/264226@main